--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,26 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:cardview-v7:21.0.+'
-    compile 'com.android.support:recyclerview-v7:21.0.+'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+
     compile 'com.github.jrvansuita:SQLiteHelper:v1.0.0'
+
     compile 'com.jakewharton.timber:timber:4.5.1'
+
     compile 'com.squareup.okhttp3:okhttp:3.7.0'
-    testCompile 'junit:junit:4.12'
+
     compile 'com.google.code.gson:gson-parent:2.8.0'
     compile 'com.google.code.gson:gson:2.8.0'
+
+
+    compile 'com.google.android.exoplayer:exoplayer:r2.4.0'
+    compile 'com.google.android.exoplayer:exoplayer-core:r2.4.0'
+    compile 'com.google.android.exoplayer:exoplayer-dash:r2.4.0'
+    compile 'com.google.android.exoplayer:exoplayer-ui:r2.4.0'
+    compile 'com.google.android.exoplayer:exoplayer-smoothstreaming:r2.4.0'
+
+    testCompile 'junit:junit:4.12'
 }
