--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,28 +28,36 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
+    //design
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
 
+    //database
     compile 'com.github.jrvansuita:SQLiteHelper:v1.0.0'
 
+    //logging
     compile 'com.jakewharton.timber:timber:4.5.1'
 
+    //networking
     compile 'com.squareup.okhttp3:okhttp:3.7.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
+    //gson parsing
     compile 'com.google.code.gson:gson-parent:2.8.0'
     compile 'com.google.code.gson:gson:2.8.0'
 
-
+    //exo player
     compile 'com.google.android.exoplayer:exoplayer:r2.4.0'
     compile 'com.google.android.exoplayer:exoplayer-core:r2.4.0'
     compile 'com.google.android.exoplayer:exoplayer-dash:r2.4.0'
     compile 'com.google.android.exoplayer:exoplayer-ui:r2.4.0'
     compile 'com.google.android.exoplayer:exoplayer-smoothstreaming:r2.4.0'
 
+
+    //testing
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
