--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
+            android:configChanges="keyboardHidden|orientation"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -56,6 +57,7 @@
         <activity
             android:name=".ui.RecipeActivity"
             android:label="@string/title_activity_recipe"
+            android:configChanges="keyboardHidden|orientation"
             android:parentActivityName=".ui.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -64,6 +66,7 @@
         <activity
             android:name=".ui.StepActivity"
             android:label="@string/title_activity_step"
+            android:configChanges="keyboardHidden|orientation"
             android:parentActivityName=".ui.RecipeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
